--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -57,7 +57,7 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 \label{sec:questionnaire}
 \input{questionnaire}
 
-\section{Opportunities/Solutions and\\ Barriers} 
+\section{Opportunities, Solutions and\\ Barriers} 
 \input{opportunities}
 \label{sec:opportunities}
 
