Section 6 and appendix.

--- a/text/surveysummary.tex
+++ b/text/surveysummary.tex
@@ -1,8 +1,8 @@
 For the purposes of this paper, this appendix contains a summary of the questionnaire.
-The complete text of our questionnaire, which includes some background 
-and explanatory material, is available at
-\href{https://www.surveymonkey.com/s.aspx?sm=Y%2feFYAHaRP1tw5bhUMdtfg%3d%3d}{EEHPCWG questionnaire}.
-Note that the questionnaire at that site is no longer active; any responses are not saved.
+%The complete text of our questionnaire, which includes some background 
+%and explanatory material, is available at
+%\href{https://www.surveymonkey.com/s.aspx?sm=Y%2feFYAHaRP1tw5bhUMdtfg%3d%3d}{EEHPCWG questionnaire}.
+%Note that the questionnaire at that site is no longer active; any responses are not saved.
 
 The questionnaire is divided into the following three sections: 
 \begin{itemize}
