--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,41 +1,40 @@
-This paper explores the possibility of a new relationship between electricity service providers
-and supercomputer centers with increased communication and engagement from both parties.
+This paper explores the possibility of a new relationship between ESPs
+and SCs with increased communication and engagement from both parties.
 
-Because supercomputer centers have an increasingly large and fluctuating
+Because SCs have an increasingly large and fluctuating
 power demand, they challenge their providers to supply a reliable
 source of electricity.
-Electricity service providers are interested in partnering with customers,
-like supercomputer centers, to create a more dynamic and resilient grid
+ESPs are interested in partnering with customers,
+like SCs, to create a more dynamic and resilient grid
 by obtaining predictable demand forecasts and engaging in programs like 
 demand response.
 
-We focused our attention on the largest supercomputer centers in the United States. The two supercomputer 
-centers with the largest electricity demand, ORNL and LLNL, have had very different experiences.  
+We focused our attention on the largest SCs in the United States. The two SCs with the largest electricity demand, ORNL and LLNL, have had very different experiences. 
 ORNL's experience is that its electricity demand and fluctuations are not significant factors for their 
-electricity service provider.  
-LLNL's experience is opposite to that of ORNL.  Because of large swings in 
-power usage, the LLNL supercomputer center was approached by their electricity service provider with a 
-request for daily predictable demand forecasts. That request began an ongoing relationship.  
+ESP. 
+LLNL's experience is opposite to that of ORNL. Because of large swings in 
+power usage, the LLNL SC was approached by their ESP with a 
+request for daily predictable demand forecasts. That request began an ongoing relationship. 
 
-The LANL supercomputer center's experience is similar to that of LLNL. SDSC has an even tighter relationship 
-with their electricity service provider, but this relationship involves the entire campus and not just the 
-supercomputer center.  
+The LANL SC's experience is similar to that of LLNL. SDSC has an even tighter relationship 
+with their ESP, but this relationship involves the entire campus and not just the 
+SC. 
 
-As previous research with datacenters has shown \cite{LBNL-6560E}, supercomputer centers can serve as   
+As previous research with datacenters has shown \cite{LBNL-6560E}, SCs can serve as  
 resources to the grid. To enable this, automation technologies and data communication standards, 
-which can link the supercomputer centers with the electric grid and on-site power management strategies 
-for grid services will play a key role to ease adoption and lower the participation costs.  Power capping, 
+which can link the SCs with the electric grid and on-site power management strategies 
+for grid services will play a key role to ease adoption and lower the participation costs. Power capping, 
 shutdown, and job scheduling are identified as the most interesting management strategies with the highest 
-leverage for responding to requests from electricity service providers.  
+leverage for responding to requests from ESPs. 
 
-Nonetheless, the business case for the grid integration of supercomputer centers remains to be demonstrated.  
-Supercomputer centers have concerns that deploying these strategies might have an adverse impact on 
-their primary mission. One of the key enablers for supercomputing centers to participate in 
-electricity markets (e.g., demand response, electricity prices) is having markets that value their 
+Nonetheless, the business case for the grid integration of SCs remains to be demonstrated. 
+SCs have concerns that deploying these strategies might have an adverse impact on 
+their primary mission. One of the key enablers for SCs to participate in 
+electricity markets (for example, demand response, electricity prices) is having markets that value their 
 participation. In other areas like commercial buildings and select industrial facilities, benefits to 
-both electricity service providers and customers are well documented. However, as the electrical grid 
-and new dynamic loads such as supercomputer centers evolve, the markets need mechanisms to identify 
-and provide value of participation (e.g., cost, energy, carbon).
+both ESPs and customers are well documented. However, as the electrical grid 
+and new dynamic loads such as SCs evolve, the markets need mechanisms to identify 
+and provide value of participation (for example, cost, energy, carbon).
 
 We are planning to pursue several areas in our future work.
 
@@ -43,16 +42,14 @@ We are planning a similar survey for Europe to explore if there is a more compel
 in other geographies.
 We expect the business value of such grid integration to be enhanced where the price of 
 electricity is expensive, varies dynamically, or where there is strong reliance on expensive back-up 
-generation (e.g., India).   
+generation (for example, India).  
 
-We plan on following-up with the ESPs that support these US-based supercomputer 
-centers. We note that this work's focus was from the perspective of the supercomputer center, and 
+We plan on following-up with the ESPs that support these US-based SCs. We note that this work's focus was from the perspective of the SC, and 
 we are interested in hearing from the ESPs about what makes a customer more or less interesting or 
 challenging with respect to grid integration.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
 and demand forecasting are becoming increasingly important.
-Electrical grid programs may react in different ways to the timescale of a supercomputer center's load response.
+Electrical grid programs may react in different ways to the timescale of a SC's load response.
 What are the trends 
-in inter-hour fluctuation patterns?  Is this a new behavior, an interim one, or one that is likely to get worse?
-
+in inter-hour fluctuation patterns? Is this a new behavior, an interim one, or one that is likely to get worse?
