--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,19 +1,16 @@
-Some of the largest supercomputer centers in the United States are developing 
+Some of the largest supercomputing centers in the United States are developing 
 new relationships with their electricity service providers. 
 These relationships, similar to other commercial and industrial partnerships, are 
 driven by mutual interest to reduce energy costs and improve electrical grid reliability.
-Supercomputer centers are concerned about electricity quality, environmental 
-impact and availability,
-while electricity service providers are concerned about impacts
+While supercomputing centers are concerned about electricity quality, environmental 
+impact and availability, electricity service providers are concerned about impacts
 on electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations.
-Supercomputer centers' power demand can be 20MW or more---the 
-theoretical peak power requirements are greater than 45MW---and recurring 
-intra-hour variability can exceed 8MW.
-%Consequently, the electricity service providers for some supercomputer centers
-%are asking for hourly forecasts of power demand, a day in advance.
+Supercomputing centers' power demand can be 20 MW or more---the 
+theoretical peak power requirements are greater than 45 MW---and recurring 
+intra-hour variability can exceed 8 MW.
 This paper evaluates today`s relationships, potential partnerships and possible 
-integration between supercomputer centers and their electricity service providers.
-The paper uses feedback from a questionnaire submitted to supercomputer centers 
-on the Top100 List in the United States to list opportunities for overcoming the 
+integration between supercomputing centers and their electricity service providers.
+The paper uses feedback from a questionnaire submitted to supercomputing centers 
+on the Top100 List in the United States to describe opportunities for overcoming the 
 challenges to HPC-Grid integration.
 
