--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -79,8 +79,7 @@ may be possible to use increases in liquid cooling temperature as a
 grid-integration strategy as well. 
 
 Ghatikar et. al \cite{Ghatikar2012a} describe field studies on using thermal
-management as a grid-integration strategy. They demonstrate increasing
-“facility HVAC temperature set points in order to decrease HVAC power
+management as a grid-integration strategy. They demonstrate increasing ``facility HVAC temperature set points in order to decrease HVAC power
 demand” in two different field locations. There was only a small
 electricity demand decrease demonstrated.
 
