more SCs and ESPs fixed.

--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -87,8 +87,7 @@ Real-time pricing is not pre-scheduled; prices can be set day-ahead or day-of.
 
 Although these methods and programs have historically not been relevant to SCs,
 the following example illustrates their potential relevance.
-The generation capacity requirements and response timescales vary across the country for electricity 
-providers and operators. For example, the New England independent system operator (ISO-NE) uses a method 
+The generation capacity requirements and response timescales vary across the country for ESPs and operators. For example, the New England independent system operator (ISO-NE) uses a method 
 of regulation and reserves that relies heavily on a day-ahead market program. This provides an opportunity 
 for demand side resources---such as SCs with renewable energy sources---to participate in the 
 market supplying the ISO-NE with electricity. It also makes the ISO-NE particularly sensitive to major 
