--- a/text/intro.tex
+++ b/text/intro.tex
@@ -32,16 +32,16 @@ ESPs.
 A mutual understanding of concerns between SCs and ESPs can 
 produce a symbiotic relationship that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of %HPC TP: replace HPC with SCs
-supercomputing centers with the electrical grid.
+SCs with the electrical grid.
 
 The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
 investigates opportunities for large supercomputing sites to  
-integrate more closely with their electricity service providers.
+integrate more closely with their ESPs.
 We seek to understand the willingness of SCs to
 cooperate with their ESPs, their expectations from their ESPs, and the feasible measures
 that SCs could employ to help their ESPs.
 To achieve our objectives we developed a questionnaire and distributed it to 
-the Top100 supercomputer centers in the United States. 
+the Top100 SCs in the United States. 
 %NEED TEASER RESULTS HERE!
 %Indicate results of questionnaire here.
 
@@ -74,9 +74,9 @@ electricity markets in the United States. Future work can extend the analysis to
 The paper is organized as follows.
 Sections~\ref{sec:ESPintegration} and~\ref{sec:supercomputercenters} of this paper
 describe in greater detail the model for 
-integrating supercomputer centers and the electrical grid.
+integrating SCs and the electrical grid.
 Section~\ref{sub:priorwork}
-reviews prior work in supercomputing center strategies. %TP: HPC replaced with supercomputing
+reviews prior work in SC strategies. %TP: HPC replaced with supercomputing
 Section~\ref{sec:questionnaire} provides the results of the questionnaire. 
 Section~\ref{sec:opportunities} 
 discusses the several opportunities, solutions and barriers that have been highlighted
