--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -86,7 +86,7 @@ Contributing to electrical grid storage&
 Approximately half of the respondents are not currently interested in shedding
 load during peak demand. LANL reports that the ``technical feasibility" and ``business case has yet to be developed."
 There is slightly more interest in shifting than shedding load. SDSC reports that
- ``Automatic load shedding is being explored/deployed today'' for the entire campus, not just the supercomputing center.
+ ``Automatic load shedding is being explored/deployed today'' for the entire campus, not just the SC.
 
 \begin{table*}[htbp]
 \centering
@@ -235,7 +235,7 @@ interest and impact.
 \end{figure}
 
 Temperature control and lighting management are utilized as strategies, but considered medium to low interest and impact
-for responding to requests from electricity service providers. 
+for responding to requests from ESPs. 
 The infrastructure energy efficiency of the responding supercomputer sites is high, as reflected in their reported
 Power Usage Effectiveness (PUE) (Figure \ref{figPUE}). Two sites reported a PUE below 1.25, the majority were between 
 1.25 and 1.5 and the highest was 1.53. Approximately half of the respondents said that they used 
