--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -10,7 +10,7 @@ quadratic relation of power to frequency biased the results towards overall
 energy savings. Early work included several modeling efforts focused on
 the effects of CPU- and memory-boundedness on delay and energy in MPI programs~\cite{SpringerPPoPP2006,GeICPP2007,LiHPCA2006,CameronSC2005,HsuSC2005}. 
 This work led to the CPUMiser~\cite{GeICPP2007} and Jitter runtime systems, which were designed 
-to maximize energy saving consistent with a user-specific delay~\cite{KappiahSC2005}.
+to maximize energy saving consistent with a user-specified delay~\cite{KappiahSC2005}.
 Treating energy savings as an optimization problem led to a linear programming
 solution~\cite{rountree:07}. The follow-on Adagio runtime system slowed only
 computation that could be proven to be off the critical path, leading to significant
