--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -79,7 +79,7 @@ management as a grid-integration strategy. They demonstrate increasing ``facilit
 demand” in two different field locations. There was only a small
 electricity demand decrease demonstrated.
 
-Runtime cooling strategies are mostly job-placement-centric. These techniques
+Runtime cooling strategies are mostly job-placement centric. These techniques
 either aim to place incoming computationally intensive jobs in a thermal-aware
 manner on servers with lower temperatures or attempt to migrate or load-balance
 jobs from high-temperature servers to servers with lower temperatures.
