Another minor typo.

--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -106,7 +106,7 @@ requests out of order on idle nodes.
 Fan et al. \cite{PowerAwareServer1} discussed power-aware job scheduling in the
 datacenter domain. They discussed a power monitoring system that could use
 power capping (based on a power estimation method such as RAPL or direct power
-sensing) and a power throttling mechanism. Such as system works well when is a
+sensing) and a power throttling mechanism. Such a system works well when is a
 set of jobs with loose service level guarantees or low priority that can be
 forced to reduce consumption when the datacenter is approaching the power cap
 value. Etinski et al. \cite{Etinski1,Etinski2,Etinski3,Etinski4} explored
