--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -166,7 +166,7 @@ Use back-up resources (e.g., generators) &
 \end{tabular}
 \label{tab3}
 \end{table*}
-Responding to pricing incentive programs is also not considered currently interesting to approximately half of the respondents, although the reasons for this low interest may be organizational. Several
+Responding to pricing incentive programs is also not considered currently interesting by approximately half of the respondents, although the reasons for this low interest may be organizational. Several
 open-ended comments revealed that pricing is fixed and/or done by another
 organization at the site level and outside of their immediate control.
 
