--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -172,7 +172,7 @@ organization at the site level and outside of their immediate control.
 
 Only twenty percent of the respondents have had discussions with their
 ESPs about congestion, regulation and frequency
-response. LANL is one of two who have had discussions and who commented that
+response. LANL is one of the two who have had discussions and who commented that
 they are ``learning about the process'' and that it is ``outside of [their] visibility or control''.
 
 There were many more respondents who have had discussions with their
