--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -246,12 +246,10 @@ strategies for improving energy efficiency, so it is not surprising that sites w
 NOAA comments that their ``lights automatically shut off 24x7 
 when there is no motion in the data center." There is a value in lighting control for 
 energy efficiency purposes, as demonstrated by its having been fully implemented. NOAA also comments that
-the impact of further lighting control "is so small compared to the HPC demand load that" they would ``be surprised 
-if the utility is interested." 
+the impact of further lighting control ``is so small compared to the HPC demand load that" they would ``be surprised 
+if the utility is interested.''
 
-LLNL reports that they ``took 3 years to raise the temperature in their center by 18 degrees F. 
-It was done in conjunction with a failure rate analysis of the systems as well as a measurement of the 
-electrical savings prior to moving to the next set point”. LLNL is currently operating in the ASHRAE 
+LLNL reports that they ``took 3 years to raise the temperature in their center by 18 degrees F. It was done in conjunction with a failure rate analysis of the systems as well as a measurement of the electrical savings prior to moving to the next set point.'' LLNL is currently operating in the ASHRAE 
 recommended range, but expresses concerns with increasing temperature as a grid-integration response. The 
 concerns include hardware failures, 
 tape storage read/write errors and compromising dew point requirements where liquid and air-cooling are co-located.
