--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -48,8 +48,7 @@ develop integration capabilities are related to system software.
 Specifically, and presented in approximate order of decreasing
 interest and expected impact to the questionnaire respondents, system
 software in this context consists of coarse-grained power management
-(such as uniform processor power capping across the cluster), 
-job scheduling, load migration, rescheduling backups, and fine-grained 
+(such as uniform processor power capping across the cluster), job scheduling, load migration, rescheduling backups, and fine-grained 
 power management (such as dynamic, per-processor power capping).
 
 Coarse-grained power capping may be one of the most straightforward
