commenting out category, terms and keywords.

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -33,11 +33,11 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 \maketitle              % typeset the title of the contribution
 
 \input{abstract}
-\category{C.4}{Performance of Systems}{Measurement Techniques}[power, energy]
+%\category{C.4}{Performance of Systems}{Measurement Techniques}[power, energy]
 
-\terms{Management, Measurement, Performance}
+%\terms{Management, Measurement, Performance}
 
-\keywords{Electricity Service Provider, demand response}
+%\keywords{Electricity Service Provider, demand response}
 
 %
 \section{Introduction}
