--- a/text/intro.tex
+++ b/text/intro.tex
@@ -32,7 +32,7 @@ ESPs.
 A mutual understanding of concerns between SCs and ESPs can 
 produce a symbiotic relationship that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of %HPC TP: replace HPC with SCs
-SCs with the electrical grid.
+SCs with the electrical grid. Grid Integration in the context of this study refers to the dynamic interaction and value between the demand-side resources (SCs) and the supply-side resources (ESPs).
 
 The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
 investigates opportunities for large supercomputing sites to  
@@ -55,7 +55,8 @@ new market opportunities \cite{Ghatikar2012a, Ghatikar2012b}.
 % Now a reference. TP. \footnote{LBNL Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc}.
 This integration model describes programs that are used by some of the ESPs %electricity service providers 
 to encourage particular responses by their customers and methods 
-used to balance the electrical grid supply and demand. This is referred to as \emph{demand response}. %TP: This defines demand response, I'm clarifying this here.
+used to balance the electrical grid supply and demand. This is referred to as \emph{demand response}.
+ %TP: This defines demand response, I'm clarifying this here.
 %Perhaps TP: No "perhaps".
 One of the most straightforward ways that SCs can begin
 the process of engaging %replace participating with engaging, as participating is used twice in the sentence
